Update FileAndURLCopy.java